make all pages responsive, try to fix issue with intro on mobile

--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
-#intro {
-  background: black;
-  color: lime;
-  font-family: "Crimson Text";
-  font-size: 2.93vw;
-  margin-top: -0.3em;
-  margin-left: 1em;
-  margin-right: 1.25em;
-}
-
 body {
   background: black;
   color: white;
   font-family: "Crimson Text";
   font-size: 3.75vw;
-  margin-left: 1em;
-  margin-right: 1.25em;
-  margin-top: 0.5em;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  margin-top: 1.5vw;
+}
+
+#intro {
+  background: black;
+  color: lime;
+  font-family: "Crimson Text";
+  font-size: 2.93vw;
+  margin-top: 2.5vw;
+  margin-left: 0vw;
+  margin-right: 2.25vw;
 }
 
 .header {
@@ -24,13 +24,16 @@ body {
 }
 
 .myName {
-  font-size: 50px;
-  font-weight: 700;
+  font-size: 5vw;
   color: lime;
 }
 
 .myName:hover {
   color: aqua;
+}
+
+.myName:active {
+  color: black;
 }
 
 .tab {
@@ -42,17 +45,27 @@ body {
   color: lime;
 }
 
+.tab:active {
+  color: black;
+}
+
 .tagline {
-  font-size: 40px;
-  margin-top: -0.3em;
+  font-size: 4vw;
+  margin-top: -0.75vw;
 }
 
 .divider {
-  margin-top: -0.4em;
+  width: 90vw;
+  height: 0vw;
+  margin-top: -1.5vw;
+}
+
+.homeDivider {
+  width: 92vw;
 }
 
 .footer {
-  margin-top: -1em;
+  margin-top: -4vw;
 }
 
 #name {
@@ -66,13 +79,13 @@ body {
 
 #block5 {
   text-align: center;
-  margin-top: -0.5em;
+  margin-top: 1vw;
 }
 
 .tag {
   display: inline;
   text-align-last: center;
-  font-size: 1.4em;
+  font-size: 4.4vw;
   text-align: center;
 }
 
@@ -86,7 +99,7 @@ body {
 }
 
 .url:active {
-  color: white;
+  color: black;
 }
 
 .blurb {
@@ -107,20 +120,73 @@ body {
 #resume {
   display: flex;
   justify-content: space-between;
-  margin-right: 7em;
-  margin-top: 0em;
+  margin-right: 25vw;
+  margin-top: 0vw;
 }
 
 .col {
-  font-size: 35px;
-  margin-top: 0em;
+  font-size: 3.5vw;
+  margin-top: 0vw;
+  margin-left: 0vw;
+  margin-right: 0vw;
 }
 
 .subentry {
-  font-size: 30px;
+  font-size: 3vw;
 }
 
 #pdf {
-  font-size: 15px;
+  font-size: 1.5vw;
   color: mediumorchid;
+}
+
+#quoteBox {
+  background-color: grey;
+  margin-bottom: -0.25vw;
+}
+
+#quote {
+  font-size: 3vw;
+  text-align: center;
+}
+
+#article {
+  font-size: 2.2vw;
+}
+
+.line {
+  margin-top: 1vw;
+}
+
+#breakdown {
+  font-size: 2.4vw;
+  margin-left: -2vw;
+  margin-right: 2vw;
+}
+
+#firstPoint {
+  margin-bottom: 2vw;
+}
+
+#tldr {
+  margin-top: 3vw;
+  margin-bottom: 2vw;
+}
+
+#tldrDivider{
+  margin-top: 3vw;
+}
+
+.ellipses {
+  text-align: center;
+  margin-top: 1vw;
+  margin-bottom: 1vw;
+}
+
+#ellipses1 {
+  margin-top: -3vw;
+}
+
+#ellipses2 {
+  margin-top: -1vw;
 }
